Bug #8775: IFRAME covers on drag now handled by dragdrop2 lib

--- a/imp/themes/screen-dimp.css
+++ b/imp/themes/screen-dimp.css
@@ -593,11 +593,6 @@ div.dimpActionsCompose, div.dimpActionsMsg {
     overflow: auto;
 }
 
-#messageBodyCover {
-    position: absolute;
-    z-index: 1000;
-}
-
 /* Message Composition. */
 .composeAddrbook {
     color: blue;
